--- a/Phone App/platforms/browser/www/index.html
+++ b/Phone App/platforms/browser/www/index.html
@@ -35,7 +35,7 @@
             {
                 $("#checkIn").click(function () {
                     var action = "";
-                    if ($("#site").val() === "") {
+                    if ($("#site").val() === "" && $("#existingSite option:selected").val()!=="Please enter the site if new") {
                         var site = $("#existingSite option:selected").val();
                         action = "not new";
                     } else {
@@ -59,17 +59,14 @@
                                 {
                                     $("#status").html('Checked in Successfully');
                                     $("#site").val("");
-                                    $("#notes").vals("");
+                                    $("#notes").val("");
                                 } else if (data === "Error")
                                 {
-                                    alert("There has been an error, please check \n\
-                        you entry and try again");
+                                    alert("error");
                                 }
                             }
                         });
                     }
-                    alert("There has been an error, please check \n\
-                        you entry and try again");
                 });
             });
                     </script>   
@@ -78,14 +75,10 @@
             {
                 $("#checkOut").click(function () {
                     var site = $("#existingSite option:selected").val();
-                    console.log(site);
                     var notes = $("#notes").val();
-                    console.log(notes);
                     var name = $("#name option:selected").val();
-                    console.log(name);
                     var url = "http://192.168.1.247/checkOut.php";
                     var dataString = "site=" + site + "&notes=" + notes + "&name=" + name;
-                    console.log(dataString);
                     if ($.trim(site).length > 0 & $.trim(notes).length > 0 & $(name) !== "Please select your name")
                     {
                         $.ajax({
@@ -98,6 +91,8 @@
                                 if (data === "Success")
                                 {
                                     $("#status").html('Checked out Successfully');
+                                    $("#site").val("");
+                                    $("#notes").vals("");
                                 } else if (data === "Error")
                                 {
                                     alert("error");
